--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     ],
     "require": {
         "php": "^7.3",
+        "donatello-za/rake-php-plus": "^1.0",
         "laravel-zero/framework": "^8.0"
     },
     "require-dev": {
